--- a/recipes/grandmas_fudge.html
+++ b/recipes/grandmas_fudge.html
@@ -1,1 +1,33 @@
-<h1>Grandma's Fudge Recipe</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Grandma's Fudge</title>
+    </head>
+
+    <body>
+        <h1>Grandma's Fudge</h1>
+        <img src="../images/fudge.jpg" alt="Grandma's fudge photo" height="300">
+        <h2>Recipe handed down to me as Sees Chocolate Fudge</h2>
+        <p>I have been making this fudge since I was able, and before that I helped my mom stir (and stir and stir) when she made it. Reserved for holidays, this fudge recipe is rich and dark. My mom says she got the recipe from her mom. It's always been in her book as being called "Sees Chocolate Fudge" - Sees being a candy company from decades ago. Add nut if you like. Or not. It's delicious either way.</p>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>4 1/2 cups sugar</li>
+            <li>1 cup butter</li>
+            <li>1 (13 oz) can evaporated milk</li>
+            <li>3 (12 oz) packages semi-sweet chocolate chips</li>
+            <li>1 (16 oz) package marshmallows (NOT mini!)</li>
+            <li>(optional) 1 cup chopped nuts</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>On medium-high(ish) heat in heavy-bottomed pan, add sugar, butter, and milk.</li>
+            <li>Mix well together until boiling.</li>
+            <li>Boil for 8 minutes (SET A TIMER!) then turn off burner (or remove from burner if electric stove).</li>
+            <li>Add chocolate chips, marshmallows, and nuts to pan.</li>
+            <li>STIR until chocolate chips and marshmallows are melted. (This builds your arm muscles!)</li>
+            <li>Pour into buttered 9x13 pan. Allow to cool. Cut into pieces.</li>
+        </ol>
+        <p>Cutting tip - Cover your counter with wax paper and turn the pan upside down after dipping the bottom of the pan in hot water for a few seconds. Then use a long knife to cut end-to-end. MUCH easier than cutting them in the pan. ;)</p>
+    </body>
+</html>
