--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/grandmas_fudge.html">Grandma's Fudge</a>
+    <ul>
+      <li><a href="recipes/grandmas_fudge.html">Grandma's Fudge</a></li>
+      <li><a href="recipes/mac_and_cheese.html">Homemade Mac & Cheese</a></li>
+      <li><a href="recipes/pear_salad.html">Pear Salad</a></li>
+      <li><a href="recipes/potato_salad.html">Potato Salad</a></li>
+    </ul>
   </body>
 </html>
