fix list close tag and spelling

--- a/recipes/mac_and_cheese.html
+++ b/recipes/mac_and_cheese.html
@@ -10,7 +10,7 @@
     <img src="../images/homemade_mac_and_cheese.jpg" alt="mac and cheese photo" height="300">
     <h2>My kids' favorite mac and cheese!</h2>
     <p>This recipe for homemade mac and cheese is, to put it plainly, quite rich. Some of the ingredients seem a bit odd. It was years before I ever even tried the recipe, which I copied from an old Great Plains cookbook that my mom has had for decades. TRUST ME - JUST TRY IT. All other mac & cheese pales in comparison!</p>
-    <h3>Indredients:</h3>
+    <h3>Ingredients:</h3>
     <ul>
         <li>1 Large onion, chopped</li>
         <li>1 large green bell pepper, chopped</li>
@@ -21,6 +21,7 @@
         <li>1 lb. elbow macaroni, cooked</li>
         <li>milk</li>
         <h3>Steps:</h3>
+      </ul>
         <ol>
             <li>Sautee onion and bell pepper in butter.</li>
             <li>Add soup, pimento, and cheese.</li>
@@ -29,7 +30,7 @@
             <li>Pour into casserole pan.</li>
             <li>Bake at 350 degrees til heated.</li>
         </ol>
-    </ul>
+
   </body>
 
 </html>
