typo on the first step

--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -21,7 +21,7 @@
         </ul>
         <h4>Steps:</h4>
         <ol>
-            <li>In a medium bowl, stir together Mayo, mustard, vinegar, salt & pepper></li>
+            <li>In a medium bowl, stir together Mayo, mustard, vinegar, salt & pepper.</li>
             <li>Add onion and celery to mixture, stir.</li>
             <li>In large bowl full of drained and cooled potatoes, pour mixture and fold to coat throughout.</li>
             <li>Refrigerate til ready to serve.</li>
