--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Dawn's Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>Dawn's Recipes</h1>
+    <div>
     <ul>
       <li><a href="recipes/grandmas_fudge.html">Grandma's Fudge</a></li>
       <li><a href="recipes/mac_and_cheese.html">Homemade Mac & Cheese</a></li>
       <li><a href="recipes/pear_salad.html">Pear Salad</a></li>
       <li><a href="recipes/potato_salad.html">Potato Salad</a></li>
     </ul>
+    </div>
   </body>
 </html>
