--- a/recipes/grandmas_fudge.html
+++ b/recipes/grandmas_fudge.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Grandma's Fudge</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Grandma's Fudge</h1>
         <img src="../images/fudge.jpg" alt="Grandma's fudge photo" height="300">
-        <h2>Recipe handed down to me as Sees Chocolate Fudge</h2>
+        <h2>Recipe handed down to me as "Sees Chocolate Fudge"</h2>
         <p>I have been making this fudge since I was able, and before that I helped my mom stir (and stir and stir) when she made it. Reserved for holidays, this fudge recipe is rich and dark. My mom says she got the recipe from her mom. It's always been in her book as being called "Sees Chocolate Fudge" - Sees being a candy company from decades ago. Add nuts if you like. Or not. It's delicious either way.</p>
         <h3>Ingredients:</h3>
         <ul>
