--- a/recipes/grandmas_fudge.html
+++ b/recipes/grandmas_fudge.html
@@ -8,10 +8,12 @@
 
     <body>
         <h1>Grandma's Fudge</h1>
-        <img src="../images/fudge.jpg" alt="Grandma's fudge photo" height="300">
+        <img src="../images/fudge.jpg" alt="Grandma's fudge photo">
         <h2>Recipe handed down to me as "Sees Chocolate Fudge"</h2>
         <p>I have been making this fudge since I was able, and before that I helped my mom stir (and stir and stir) when she made it. Reserved for holidays, this fudge recipe is rich and dark. My mom says she got the recipe from her mom. It's always been in her book as being called "Sees Chocolate Fudge" - Sees being a candy company from decades ago. Add nuts if you like. Or not. It's delicious either way.</p>
         <h3>Ingredients:</h3>
+        
+       <div>
         <ul>
             <li>4 1/2 cups sugar</li>
             <li>1 cup butter</li>
@@ -20,6 +22,7 @@
             <li>1 (16 oz) package marshmallows (NOT mini!)</li>
             <li>(optional) 1 cup chopped nuts</li>
         </ul>
+        </div>
         <h4>Steps</h4>
         <ol>
             <li>On medium-high(ish) heat in heavy-bottomed pan, add sugar, butter, and milk.</li>
