--- a/recipes/mac_and_cheese.html
+++ b/recipes/mac_and_cheese.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Homemade Mac and Cheese</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
@@ -11,6 +12,7 @@
     <h2>My kids' favorite mac and cheese!</h2>
     <p>This recipe for homemade mac and cheese is, to put it plainly, quite rich. Some of the ingredients seem a bit odd. It was years before I ever even tried the recipe, which I copied from an old Great Plains cookbook that my mom has had for decades. TRUST ME - JUST TRY IT. All other mac & cheese pales in comparison!</p>
     <h3>Ingredients:</h3>
+    <div>
     <ul>
         <li>1 Large onion, chopped</li>
         <li>1 large green bell pepper, chopped</li>
@@ -22,6 +24,7 @@
         <li>milk</li>
         <h3>Steps:</h3>
       </ul>
+      </div>
         <ol>
             <li>Sautee onion and bell pepper in butter.</li>
             <li>Add soup, pimento, and cheese.</li>
