add stylesheet and div to pear salad

--- a/recipes/pear_salad.html
+++ b/recipes/pear_salad.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Pear Salad</title>
+        <link rel="stylesheet" href="../styles.css"
     </head>
 
     <body>
@@ -11,6 +12,7 @@
         <h2>A Lime, Pear, and Pecan congealed salad.</h2>
         <p>Pear salad, lime congealed salad, the green stuff - it goes by many names! I've been eating this as long as I've been alive at every Thanksgiving and Christmas meal. The full plate was empty every night before we went to bed. At some point, most of us outgrew our love for Pear Salad... but not I! My kids don't much like it, but my mom and nephew and BFF do. I'm still going to make it at least twice each year. OH - And I don't add the nuts. But, you do you!</p>
         <h3>Ingredients:</h3>
+        <div>
         <ul>
             <li>1 pkg. (3 oz) lime jello</li>
             <li>1 c boiling (hot from the microwave) pear juice (or water added to make the cup)</li>
@@ -19,6 +21,7 @@
             <li>1 pkg (2 oz) dessert topping mix (Dream Whip NOT COOL WHIP!)</li>
             <li>(optional) 1/2 c chopped nuts</li>
         </ul>
+        </div>
         <h4>Steps:</h4>
         <ol>
             <li>Dissolve gelatin powder in water/juice mix.</li>
