add stylesheet and div to potato salad

--- a/recipes/pear_salad.html
+++ b/recipes/pear_salad.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Pear Salad aka "The Green Stuff"</h1>
-        <img src="../images/pear_salad.jpg" alt="pear salad photo" height="300">
+        <img src="../images/pear_salad.jpg" alt="pear salad photo">
         <h2>A Lime, Pear, and Pecan congealed salad.</h2>
         <p>Pear salad, lime congealed salad, the green stuff - it goes by many names! I've been eating this as long as I've been alive at every Thanksgiving and Christmas meal. The full plate was empty every night before we went to bed. At some point, most of us outgrew our love for Pear Salad... but not I! My kids don't much like it, but my mom and nephew and BFF do. I'm still going to make it at least twice each year. OH - And I don't add the nuts. But, you do you!</p>
         <h3>Ingredients:</h3>
