--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Potato Salad</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Potato Salad</h1>
-        <img src="../images/potato_salad.jpg" alt="potato salad photo" height="300">
+        <img src="../images/potato_salad.jpg" alt="potato salad photo">
         <h2>A Mustard Potato Salad Recipe</h2>
         <p>There are about as many potato salad recipes as there are women in the South. Though I was reared in the south, I was brought up by a North Dakotan. Maybe that explains the big chunks of potato and celery and the copious amounts of mustard. Either way, its my favorite, and the favorite of many who have had the chance to try it. Enjoy!</p>
         <h3>Ingredients:</h3>
+        <div>
         <ul>
             <li>Potatoes, 5 lb (literally use whatever, but my fave is red potatoes with the skin on) cut up, boiled til fork tender, and drained.</li>
             <li>Mayonnaise</li>
@@ -19,6 +21,7 @@
             <li>Celery, chopped (remove outer 6 or 7 ribs and use the rest for this recipe, including leaves).</li>
             <li>salt & pepper to taste</li>
         </ul>
+        </div>
         <h4>Steps:</h4>
         <ol>
             <li>In a medium bowl, stir together Mayo, mustard, vinegar, salt & pepper.</li>
